[package]
name = "dsp_lab"
version = "0.2.0"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
fast-math = "0.1.1"

[profile.bench]
opt-level = 3
lto = "fat"