[package]
name = "dsp_lab"
version = "0.2.0"
authors = ["Lorenzo Panieri <panierilorenzo@gmail.com>"]
edition = "2018"

[lib]
name = "dsp_lab"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
fast-math = "0.1.1"
fastapprox = "0.3.0"
criterion = "0.3"

[profile.bench]
opt-level = 3
lto = "fat"

[profile.dev]
opt-level = 3
lto = "fat"
debug = 1

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "utils_math"
harness = false

[[bin]]
name = "dsp_lab_test"
path = "src/bin/main.rs"